...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252"
            app:suffixText="kg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pesoText"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#036262"
                android:textSize="15sp" />
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252"
            app:suffixText="cm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/estaturaText"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#036262"
                android:textSize="15sp" />
...
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/IMCText"
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:enabled="false"
                android:maxLines="1"
                android:textColor="#036262"
                android:textSize="15sp" />
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405">

        <RadioButton
            android:textColor="#036262"
            android:id="@+id/siActividadFisica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:onClick="onRadioButtonAcitividadFisicaClicked"
            android:text="Sí" />

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="minutos"
        app:layout_constraintVertical_bias="0.562">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cantidadMinutosText"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:inputType="number"
            android:textColor="#036262"
            android:maxLines="1"
            android:textSize="15sp" />
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:context=".MainActivity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonSiguienteHP1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:text="Siguiente"
        android:textAllCaps="false"
        app:backgroundTint="#036262"
...
