...

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/parentescoTitulo"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:gravity="center_horizontal"
        android:text="Parentesco"
        android:textAlignment="textStart"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textColor="#036262"
        android:textSize="16sp"
        android:textStyle="bold"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28">

        <RadioButton
            android:id="@+id/siFamiliaresMelanoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="#036262"
            android:onClick="onRadioButtonFamiliaresMelanomaClicked"
            android:text="Sí" />
...
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonFamiliaresMelanomaClicked"
            android:text="No" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/madreCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="Madre"
        android:textColor="#036262"
        android:layout_marginLeft="35dp"
...
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <CheckBox
        android:id="@+id/hermanaCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="Hermana"
        android:textColor="#036262"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <CheckBox
        android:id="@+id/abueloPaternoCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="Abuelo Paterno"
        android:textColor="#036262"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:context=".MainActivity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonSiguienteHF1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:text="Siguiente"
        android:textAllCaps="false"
        app:backgroundTint="#036262"
...
