<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorialPersonal2">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/barraProgreso1"
        android:layout_height="88sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:progress="50"
        app:indicatorColor="#036262"
        android:layout_marginTop="63dp"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tituloHistorialPersonal"
        app:trackCornerRadius="50dp"/>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:id="@+id/tituloHistorialPersonal"
        android:textColor="#054141"
        android:gravity="center_horizontal"
        android:text="Historial Personal"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="20dp"
        android:gravity="center_horizontal"
        android:textColor="#036262"
        android:text="¿Fuma o ha fumado?"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:id="@+id/haFumadoRadioGroup"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241">

        <RadioButton
            android:id="@+id/siHaFumado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#036262"
            android:layout_marginRight="20dp"
            android:onClick="onRadioButtonHaFumadoClicked"
            android:text="Sí" />

        <RadioButton

            android:id="@+id/noHaFumado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#036262"
            android:onClick="onRadioButtonHaFumadoClicked"
            android:text="No" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edadFumarCaja"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="104sp"
        android:focusable="false"
        app:boxStrokeColor="#036262"
        app:hintTextColor="#036262"
        android:hint="¿A qué edad empezó a fumar?"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371"
        app:suffixText="años">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edadFumarText"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:textColor="#036262"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fumaActualmenteTitulo"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="36dp"
        android:gravity="center_horizontal"
        android:text="¿Fuma actualmente?"
        android:textColor="#036262"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:id="@+id/fumaActualmenteRadioGroup"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.540">

        <RadioButton
            android:id="@+id/siFumaActualmente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:onClick="onRadioButtonFumaActualmenteClicked"
            android:text="Sí"
            android:textColor="#036262" />

        <RadioButton

            android:id="@+id/noFumaActualmente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonFumaActualmenteClicked"
            android:text="No"
            android:textColor="#036262" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mesesFumandoCaja"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="104sp"
        android:focusable="false"
        android:hint="¿Hace cuánto fuma o por cuánto tiempo fumó? "
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="#036262"
        app:hintTextColor="#036262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        app:suffixText="meses">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mesesFumandoText"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#036262"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonAnteriorHP2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:text="Anterior"
        android:textAllCaps="false"
        app:backgroundTint="#036262"

        app:cornerRadius="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:context=".MainActivity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonSiguienteHP2"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:text="Siguiente"
        android:textAllCaps="false"
        app:backgroundTint="#036262"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:context=".MainActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>