...
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221">

        <RadioButton
            android:id="@+id/siConsumeBebidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#036262"
            android:layout_marginRight="20dp"
            android:onClick="onRadioButtonConsumeBebidasClicked"
            android:text="Sí" />
...
            android:layout_height="38dp"
            android:onClick="onRadioButtonCantidadBebidasClicked"
            android:text="Más de 3 bebidas alcohólicas a la semana " />

        <RadioButton

            android:id="@+id/bebidasDiarias2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="#036262"
            android:onClick="onRadioButtonCantidadBebidasClicked"
            android:text="Más de 2 bebidas alcohólicas al día " />

...
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773">

        <RadioButton
            android:id="@+id/siOtroCancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="#036262"
            android:onClick="onRadioButtonOtroCancerClicked"
            android:text="Sí" />
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipoCancerText"
            android:layout_width="match_parent"
            android:layout_height="51sp"
            android:textColor="#036262"
            android:maxLines="1"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:context=".MainActivity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonSiguienteHP3"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="140dp"
        android:layout_height="59dp"
        android:text="Siguiente"
        android:textAllCaps="false"
        app:backgroundTint="#036262"
...
